--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="congratulations">Congratulations!</string>
     <string name="share">Share</string>
     <string name="sharing_not_available">Sharing Not Available</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="play">Play</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="image_content_description">Image Content Description</string>
 </resources>
